# matio-openmeeg

./: .gitmodules  .travis.yml  CMakeLists.txt  README  appveyor.yml
build_tools/travis/: before_install.sh  install.sh
cmake/: CheckHeaderSTDC.cmake  FortranCInterface.cmake  FortranCInterface.cmake.old  GenerateConfigFile.cmake  HDF5Version.cmake  Packaging.cmake  XXXConfig.cmake.in
cmake/FortranCInterface/: CMakeLists.txt
documentation/: CMakeLists.txt
src/: CMakeLists.txt  inflate.c  io.c  mat.c  mat4.c  mat5.c  mat73.c  matio.h  matioConfig.cmake.in  matio_export.h  matio_private.h  matio_pubconf.cmake.in  matio_pubconf.h.in  read_data.c
src/fortran/: CMakeLists.txt
test/: CMakeLists.txt  runTest.cmake  test_mat.c
tools/: CMakeLists.txt
